# KiTrack

./: AUTHORS  CMakeLists.txt  README  README.md
.github/workflows/: linux.yml
cmake/: KiTrackConfig.cmake.in  KiTrackConfigVersion.cmake.in
doc/: CMakeLists.txt  ReleaseNotes.md  overview.html
include/Criteria/: Crit2_DeltaPhi.h  Crit2_DeltaPhi_MV.h  Crit2_DeltaRho.h  Crit2_DeltaTheta_MV.h  Crit2_Distance_MV.h  Crit2_HelixWithIP.h  Crit2_RZRatio.h  Crit2_StraightTrackRatio.h  Crit3_2DAngle.h  Crit3_2DAngleTimesR.h  Crit3_3DAngle.h  Crit3_3DAngleTimesR.h  Crit3_ChangeRZRatio.h  Crit3_IPCircleDist.h  Crit3_IPCircleDistTimesR.h  Crit3_NoZigZag_MV.h  Crit3_PT.h  Crit3_PT_MV.h  Crit4_2DAngleChange.h  Crit4_3DAngleChange.h  Crit4_3DAngleChangeNormed.h  Crit4_DistOfCircleCenters.h  Crit4_DistToExtrapolation.h  Crit4_NoZigZag.h  Crit4_PhiZRatioChange.h  Crit4_RChange.h  Criteria.h  ICriterion.h  SimpleCircle.h
include/KiTrack/: Automaton.h  FTrackExceptions.h  HopfieldNeuralNet.h  IHit.h  ISectorConnector.h  ISectorSystem.h  ITrack.h  ITrackSubset.h  KiTrackExceptions.h  Segment.h  SegmentBuilder.h  SimpleCircle.h  Subset.h  SubsetHopfieldNN.h  SubsetSimple.h  TrackSubsetHopfieldNN.h  TrackSubsetSimple.h
src/Criteria/: Crit2_DeltaPhi.cc  Crit2_DeltaPhi_MV.cc  Crit2_DeltaRho.cc  Crit2_DeltaTheta_MV.cc  Crit2_Distance_MV.cc  Crit2_HelixWithIP.cc  Crit2_RZRatio.cc  Crit2_StraightTrackRatio.cc  Crit3_2DAngle.cc  Crit3_2DAngleTimesR.cc  Crit3_3DAngle.cc  Crit3_3DAngleTimesR.cc  Crit3_ChangeRZRatio.cc  Crit3_IPCircleDist.cc  Crit3_IPCircleDistTimesR.cc  Crit3_NoZigZag_MV.cc  Crit3_PT.cc  Crit3_PT_MV.cc  Crit4_2DAngleChange.cc  Crit4_3DAngleChange.cc  Crit4_3DAngleChangeNormed.cc  Crit4_DistOfCircleCenters.cc  Crit4_DistToExtrapolation.cc  Crit4_NoZigZag.cc  Crit4_PhiZRatioChange.cc  Crit4_RChange.cc  Criteria.cc  SimpleCircle.cc
src/KiTrack/: Automaton.cc  HopfieldNeuralNet.cc  IHit.cc  Segment.cc  SegmentBuilder.cc  SimpleCircle.cc  TrackSubsetHopfieldNN.cc  TrackSubsetSimple.cc
